fixed spacing in nos cours

--- a/main-menu/home.css
+++ b/main-menu/home.css
@@ -14,7 +14,7 @@ main {
 }
 
 #hero-text{
-    margin:25px 0;
+    margin:25px 0 0 25px;
     display: flex;
     flex-direction: column;
     column-gap: 10px;
